<resources>

    <string name="facebook_app_id" translatable="false">660410181561551</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb660410181561551</string>

    <string name="app_name">TravelGuide</string>
    <string name="welcome">Welcome</string>
    <string name="or">Or connect with</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name"> Name</string>
    <string name="surname">Surname</string>
    <string name="nick_name">NickName</string>
    <string name="birth_date">Birth date</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="if_you_do_not_have_an_account">If you do not have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel_btn">Cancel</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="continue_as">Continue as</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="terms_of_services"> <u>Terms of Services</u></string>
    <string name="privacy_policy"> <u>Privacy Policy</u>.</string>
    <string name="title_activity_user_followers">UserFollowersActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="terms_text">  კონფიდენციალურობის პოლიტიკა ძალაში შესვლის თარიღი: 11 სექტემბერი, 2020 წელი
შპს თრეველ გაიდ („ჩვენ“, „ჩვენი“) მართავს მობილურ აპლიკაციას  «Travel Guide» (შემდგომში „აპლიკაცია“).
წინამდებარე გვერდი გაწვდით ინფორმაციას ჩვენი პოლიტიკის შესახებ, რომელიც ეხება პერსონალური მონაცემების შეგროვებას, გამოყენებასა და გამჟღავნებას, როდესაც თქვენ იყენებთ ჩვენს აპლიკაციას და ირჩევთ მას, თქვენ უერთდებითამ მონაცემებს. ჩვენი კონფიდენციალურობის პოლიტიკა საექსპედიციო მოგზაურობის მრჩევლისთვის და მოგზაურობის გიდისთვის რეგულირდება თავისუფალი კონფიდენციალურობის პოლიტიკის ვებსაიტის მეშვეობით.
ჩვენ ვიყენებთ თქვენს მონაცემებს აპლიკაციის უზრუნველყოფისა და გაუმჯობესების მიზნით. აპლიკაციის გამოყენებით, თქვენ ეთანხმებით ინფორმაციის შეგროვებასა და გამოყენებას ამ პოლიტიკის შესაბამისად.  თუ წინამდებარე კონფიდენციალურობის პოლიტიკაში სხვაგვარად არ არის განსაზღვრული, წინამდებარე კონფიდენციალურობის პოლიტიკაში გამოყენებულ ტერმინებს აქვს იგივე მნიშვნელობები, რაც ჩვენს პირობებში.
ინფორმაციის შეგროვება და გამოყენება
ჩვენ ვაგროვებთ ინფორმაციის განსხვავებულ სახეობებს სხვადასხვა მიზნისთვის, რათა ვუზრუნველყოთ და გავაუმჯობესოთ ჩვენი აპლიკაცია თქვენთვის.
შეგროვილი მონაცემების სახეობები
პერსონალური მონაცემები
როდესაც იყენებთ ჩვენს აპლიკაციას, ჩვენ შესაძლოა  გთხოვოთ, რომ მოგვაწოდოთ კონკრეტულად პირადობის დამადასტურებელი ინფორმაცია, რომელიც შესაძლოა გამოყენებული იქნას თქვენთან დასაკავშირებლად ან დასადგენად („პერსონალური მონაცემები“). პირადობის დამადასტურებელი ინფორმაცია შესაძლოა მოიცავდეს, მაგრამ არ ზღუდავდეს შემდეგს:
•	ელ-ფოსტის მისამართი
•	სახელი და გვარი
•	საიდენტიფიკაციო ფაილები და მონაცემების გამოყენება
•	მონაცემების გამოყენება
ჩვენ ასევე შესაძლოა შევაგროვოთ ინფორმაცია, რომელსაც თქვენი ბრაუზერი გიგზავნით, როდესაც ეწვევით ჩვენს აპლიკაციას ან გაქვთ წვდომა აპლიკაციაზე მობილური მოწყობილობით („მონაცემების გამოყენება“).
წინამდებარე მონაცემების გამოყენება შესაძლოა მოიცავდეს ინფორმაციას, როგორიცაა თქვენი კომპიუტერის ინტერნეტ პროტოკოლის მისამართი (მაგ: IP-ის მისამართი), ბრაუზერის ტიპი, ბრაუზერის ვერსია, ჩვენი აპლიკაციის გვერდები, რომელსაც სტუმრობთ, დროს ატარებთ ამ გვერდებზე, უნიკალური მოწყობილობის იდენტიფიკატორები და სხვა დიაგნოსტიკური მონაცემები.
როდესაც თქვენ აპლიკაციაზე წვდომა გაქვთ მობილური მოწყობილობით, წინამდებარე მონაცემების გამოყენება შესაძლოა მოიცავდეს ისეთ ინფორმაციას, როგორიცაა იმ მობილური მოწყობილობის სახეობა, რომელსაც იყენებთ, თქვენი მობილურის უნიკალური ID, თქვენი მობილურის  IP  მისამართი, თქვენი მობილურის ოპერატიული სისტემა, მობილური ინტერნეტ ბრაუზერის ტიპი, უნიკალური მოწყობილობის იდენტიფიკატორები და სხვა დიაგნოსტიკური მონაცემები.
მონიტორინგი და საიდენტიფიკაციო ფაილები
ჩვენ ვიყენებთ საიდენტიფიკაციო ფაილებს და მსგავს ტექნოლოგიებს ჩვენს აპლიკაციაზე საქმიანობის მონიტორინგისა და კონკრეტული ინფორმაციის ფლობის მიზნით.
საიდენტიფიკაციო ფაილების წარმოადგენს ფაილებს მონაცემების მცირე რაოდენობასთან ერთად, რომელიც შესაძლოა მოიცავდეს ანონიმურ უნიკალურ იდენტიფიკატორს.  საიდენტიფიკაციო ფაილები ინახება თქვენს მოწყობილობაში. მონიტორინგის ტექნოლოგიები ასევე იყენებს რადიოსიგნალებს, ეტიკეტებსა და ტექსტურ ფაილებს, რათა შეაგროვოს და აკონტროლოს ინფორმაცია, გააუმჯობესოს და გაანალიზოს ჩვენი აპლიკაცია.
თუ არ გსურთ საიდენტიფიკაციო ფაილების მიღება,  შეიძლება ვერ გამოიყენოთ ჩვენი აპლიკაციის ზოგიერთი ნაწილი.
საიდენტიფიკაციო ფაილების მაგალითები, რომელსაც ჩვენ ვიყენებთ:
კვარტალური საიდენტიფიკაციო ფაილები. ჩვენ ვიყენებთ კვარტალურ საიდენტიფიკაციო ფაილებს ჩვენი აპლიკაციის ასამუშვებლად.
უპირატესი საიდენტიფიკაციო ფაილები. ჩვენ ვიყენებთ უპირატეს საიდენტიფიკაციო ფაილებს, რათა დავიმახსოვროთ თქვენი უპირატესობები და სხვადასხვა  პარამეტრები.
უსაფრთხოების საიდენტიფიკაციო ფაილები. ჩვენ ვიყენებთ უსაფრთხოების საიდენტიფიკაციო ფაილებს უსაფრთხოების მიზნებისთვის.
მონაცემების გამოყენება
შპს  «თრეველ გაიდ» იყენებს შეგროვილ მონაცემებს სხვადასხვა მიზნებისთვის:
•	უზრუნველყოს და შეინარჩუნოს აპლიკაცია
•	შეგატყობინებთ ჩვენს აპლიკაციაში განხორციელებული ცვლილებების შესახებ.
•	საშუალებას გაძლევთ მონაწილეობა მიიღოთ ჩვენი აპლიკაციის ინტერაქტიულ მახასიათებლებში, როდესაც ირჩევთ ამის გაკეთებას
•	ზრუნავს მომხმარებლებზე და ეხმარება მათ
•	უზრუნველყოს ანალიზი და მოგვაწოდოს მნიშვნელოვანი ინფორმაცია, რომელიც საშუალებას მოგვცემს გავაუმჯობესოთ აპლიკაცია
•	მონიტორინგს გაუწევს აპლიკაციის გამოყენებას
•	გამოავლენს, აიცილებს და გადაამისამართებს ტექნიკურ საკითხებს
მონაცემების გადაცემა
შპს თრეველ გაიდ მიიღებს ყველა საჭირო ზომას, რათა უზრუნველყოს თქვენი მონაცემების უსაფრთხოდ დაცვა.. პერსონალური მონაცემების დაცვის პოლიტიკა რეგულირდება საქართველოს კანონის „პერსონალური დაცვის შესახებ“ (თანახმად).
მონაცემების გამჟღავნება
სამართლებრივი მოთხოვნები
შპს «თრეველ გაიდმა“ შესაძლოა გაამჟღავნოს თქვენი პერსონალური მონაცემები კეთილსინდისიერად, თუ ასეთი ქმედება საჭიროა შემდეგისთვის:
შეასრულოს კანონიერი ვალდებულება;
დაიცვას შპს  «თრეველ გაიდის“ ქონება ან უფლებები;
აიცილოს ან გამოიძიოს შესაძლო დანაშაული აპლიკაციასთან დაკავშირებით;
დაიცვას აპლიკაციის მომხმარებელთა ან საზოგადოების პირადი უსაფრთხოება;
მონაცემთა უსაფრთხოება
ჩვენთვის მნიშნელოვანია თქვენი მონაცემების უსაფრთხოება,  მაგრამ გახსოვდეთ, რომ არ არსებობს ინტერნეტით გადაცემის მეთოდი, ან ელექტრონული შენახვის მეთოდი, რომელიც არის 100%-ით უსაფრთხო. მაშინ როდესაც ჩვენ ვცდილობთ კომერციულადმისაღებისაშუალებებიგამოვიყენოთთქვენიპერსონალურიმონაცემებისდასაცავად, ჩვენ არ შეგვიძლია მისი სრული უსაფრთხოების გარანტირება.
აპლიკაციის პროვაიდერები
ჩვენ შესაძლოა დავასაქმოთ  მესამე მხარის კომპანიები და ფიზიკური პირები, რათა ხელი შეუწყონ ჩვენს აპლიკაციას („აპლიკაციის პროვაიდერები“), ჩვენი სახელით მოახდინოს აპლიკაციის მიწოდება, შეასრულოს აპლიკაცია - დაკავშირებული აპლიკაციები ან დაგვეხმაროს ანალიზში, თუ როგორ გამოვიყენოთ ჩვენი  აპლიკაცია.
ანალიტიკა/ანალიზის მეთოდი
ჩვენ შესაძლოა გამოვიყენოთ მესამე მხარე - აპლიკაციის პროვაიდერები, რათამონიტორინგი და ანალიზი გაუკეთონ ჩვენი აპლიკაციის გამოყენებას.
Google-ის ანალიტიკა
გუგლის ანალიზის მეთოდი არის ვებ ანალიზის მეთოდის აპლიკაცია, რომელიც შემოთავაზებულია გუგლის მიერ, რომელიც აკონტროლებს ვებ საიტის ინფორმაციულ ნაკადს. გუგლი იყენებს შეგროვილ მონაცემებს, რათა კონტროლი და მონიტორინგი გაუწიოს ჩვენი აპლიკაციის გამოყენებას. ეს მონაცემები გაზიარებულია სხვა გუგლის აპლიკაციებით. გუგლიმ შესაძლოა გამოიყენოს შეგროვილი მონაცემები, რათა მოახდინოს მისი საკუთარი სარეკლამო ქსელის რეკლამების კონტექსტუალიზაცია და პერსონიფიცირება.
გუგლის კონფიდენციალურობის ინსტრუქციების შესახებ დამატებითი ინფორმაციისთვის, გთხოვთ ეწვიოთ გუგლის კონფიდენციალურობისა და პირობების ვებ გვერდს:  https://policies.google.com/privacy?hl=en
Firebase
Firebase არის ანალიზის მეთოდის აპლიკაცია, რომელიც მოწოდებულია გუგლი ინკ.-ის მიერ ( Google Inc.)
თქვენ შესაძლოა თავი შეიკავოთ  Firebase-ს კონკრეტულ  მახასიათებლებზე თქვენი მობილური მოწყობილობის  პარამეტრების მეშვეობით, როგორიცაა თქვენი მოწყობილობის სარეკლამო პარამეტრები ან გამოიყენოთ გუგლის მიერ მოწოდებული ინსტრუქციები კონფიდენციალურობის პოლიტიკასთან დაკავშირებით:   https://policies.google.com/privacy?hl=en
ჩვენ ასევე ხელს გიწყობთ, რომ გადახედოთ გუგლის პოლიტიკას თქვენი მონაცემების უსაფრთხოებასთან დაკავშირებით:   https://support.google.com/analytics/answer/6004245  თუ რა სახის ინფორმაციას აგროვებს Firebase , დამატებითი ინფორმაციისთვის გთხოვთ ეწვიოთ გუგლის კონფიდენციალურობის პირობებს შემდეგ ვებ  გვერდზე:   https://policies.google.com/privacy?hl=en
ლინკები სხვა საიტებზე
ჩვენი აპლიკაცია შესაძლოა მოიცავდეს ლინკებს სხვა საიტებზე, რომელსაც არ ვამუშავებთ ჩვენ. თუ თქვენ დააწკაპებთ მესამე მხარის ლინკს, თქვენ გადაგამისამართებთ მესამე მხარის საიტზე.  გირჩევთ გადახედოთ ყველა საიტის კონფიდენციალურობის პოლიტიკას, რომელსაც თქვენ ეწვევით.
ჩვენ არ ვაკონტროლებთ და პასუხს არ ვაგებთ შინაარსზე, კონფიდენციალურობის პოლიტიკაზე ან ნებისმიერი მესამე მხარის საიტების ან აპლიკაციების ინსტრუქციებზე.
ბავშვთა კონფიდენციალობა
ჩვენი აპლიკაცია არ არის მიმართული 18 წელს ქვემოთ მყოფ ადამიანებზე („ბავშვები“).
ჩვენ შეგნებულად არ ვაგროვებთ საიდენტიფიკაციო მონაცემებს 18 წლამდე ასაკის პირებზე. თუ თქვენ ხართ მშობელი ან მეურვე და თუ დაინტერესებული ხართ თქვენი ბავშვების პერსონალური მონაცემების გადმოცემით, გთხოვთ დაგვიკავშირდით.  თუ ჩვენ გავიგებთ, რომ პერსონალური მონაცემები მივიღეთ ბავშვებისგან მშობლის თანხმობის გარეშე, ჩვენ მივიღებთ ზომებს, რომ ინფორმაცია წავშალოთ ჩვენი სერვერებიდან.


ცვლილებები ამ კონფიდენციალურობის პოლიტიკაში
ჩვენ პერიოდულად შესაძლოა განვაახლოთ ჩვენი კონფიდენციალურობის პოლიტიკა.  ნებისმიერი ცვლილების შესახებ გაცნობებთ ფოსტით.
შეგატყობინებთ ელ-ფოსტით და/ან ჩვენს აპლიკაციაზე თვალსაჩინო შეტყობინებით, წინასწარ, სანამ ცვლილება შევა ძალაში და განახლდება, „ძალაში შესვლის თარიღი“ მითითებული იქნება ამ კონფიდენციალური პოლიტიკის თავში.
გირჩევთ პერიოდულად გადახედოთ ამ კონფიდენციალურობის პოლიტიკის ცვლილებებს. ამ კონფიდენციალურობის პოლიტიკაში ცვლილებები ძალაში შედის ძალაში შესვლის თარიღიდან, როდესაც ისინი გამოქვეყნდება ამ გვერდზე.
კონტაქტი
თუ გაქვთ რაიმე შეკითხვა ამ კონფიდენციალური პოლიტიკის შესახებ, გთხოვთ დაგვიკავშირდეთ ელ-ფოსტის მეშვეობით: info@travelguideapp.ge

</string>


</resources>
