<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/register_name_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_surname_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/surname"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_surname"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_nick_name_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/nick_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_nick_name"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_birth_date_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/birth_date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_birth_date"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:gravity="center_horizontal"
                android:hint="DD -- MM -- YYYY"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_mail_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_phone_number_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/register_phone_number_container"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFlag="true"
                    app:ccp_textSize="14sp" />

                <EditText
                    android:id="@+id/register_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1.5"
                    android:inputType="number|phone"
                    android:padding="10dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/register_password_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:minEms="8"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_confirm_password_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="282dp"
                android:layout_height="42dp"
                android:background="@drawable/background_signup_edittexts"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:minEms="8"
                android:padding="10dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:id="@+id/register_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="7dp"
                android:text="@string/cancel_btn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_sign_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="7dp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
