<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Enter your New password "
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/reset_password_email_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/reset_password_email"
                android:layout_width="280dp"
                android:layout_height="37dp"
                android:background="@drawable/bg_signup_fields"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reset_password_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="280dp"
                android:layout_height="37dp"
                android:background="@drawable/bg_signup_fields"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reset_password_confirm_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/reset_password_confirm"
                android:layout_width="280dp"
                android:layout_height="37dp"
                android:background="@drawable/bg_signup_fields"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/reset_password_save"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_btn"
                android:text=" Save "
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
